trying to fix publishing to artifactory